--- a/RockWeb/Styles/styles-v2-prototype/components/_alerts.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_alerts.scss
@@ -71,7 +71,7 @@
 // ======================== ALTERNATIVE STYLE ========================
 .alert-default{
   color:              var(--color-interface-strong);
-  background-color:   var(--color-interface-soft);
+  background-color:   var(--color-interface-softer);
   border-color:       var(--color-interface-strong);
   
   hr {
