--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -2303,7 +2303,7 @@ th {
 
 .alert-default {
   color: var(--color-interface-strong);
-  background-color: var(--color-interface-soft);
+  background-color: var(--color-interface-softer);
   border-color: var(--color-interface-strong);
 }
 .alert-default hr {
@@ -2583,14 +2583,14 @@ th {
 }
 .btn-default:active, .btn-default.active, .open > .dropdown-toggle .btn-default {
   color: var(--color-interface-stronger);
-  background-color: var(--color-interface-soft);
+  background-color: var(--color-interface-softer);
   border-color: var(--color-interface-soft);
   background-image: none;
 }
 .btn-default:active:hover, .btn-default:active:focus, .btn-default:active.focus, .btn-default.active:hover, .btn-default.active:focus, .btn-default.active.focus, .open > .dropdown-toggle .btn-default:hover, .open > .dropdown-toggle .btn-default:focus, .open > .dropdown-toggle .btn-default.focus {
   color: var(--color-interface-stronger);
   background-color: var(--color-interface-soft);
-  border-color: var(--color-interface-soft);
+  border-color: var(--color-interface-medium);
 }
 .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default.focus {
   background-color: var(--color-interface-softest);
@@ -2995,8 +2995,8 @@ fieldset[disabled] .btn-danger-solid.focus {
   border-color: var(--color-primary);
 }
 .btn-outline-primary:hover {
-  color: var(--color-interface-softest);
-  background-color: var(--color-primary);
+  color: var(--color-primary);
+  background-color: var(--color-primary-soft);
   border-color: var(--color-primary);
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -3868,7 +3868,7 @@ input[type=button].btn-block {
   border-radius: 0.25em;
 }
 a .label:hover, a .label:focus {
-  color: var(--color-interface-softest);
+  color: var(--color-interface-stronger);
   text-decoration: none;
   cursor: pointer;
 }
@@ -3890,7 +3890,7 @@ a .label:hover, a .label:focus {
 
 .label-default {
   background-color: var(--color-interface-soft);
-  color: var(--color-interface-stronger);
+  color: var(--color-interface-strong);
 }
 .label-default[href]:hover, .label-default[href]:focus {
   background-color: var(--color-interface-medium);
@@ -6628,7 +6628,7 @@ td.grid-col-actions {
   border: 0;
   box-shadow: none;
   transition: color 250ms;
-  color: var(--color-interface-strong);
+  color: var(--color-interface-medium);
   background-color: transparent;
   border-color: transparent;
 }
@@ -6647,7 +6647,7 @@ td.grid-actions {
 
 .panel-section .table-light > tfoot > tr > td,
 .well .table-light > tfoot > tr > td {
-  background-color: var(--color-interface-soft);
+  background-color: var(--color-interface-softer);
 }
 
 .grid-select-field .checkbox,
@@ -12642,7 +12642,7 @@ ul.list-group-panel .list-group-item:first-child,
 }
 .datepicker table tr td.day:hover, .datepicker table tr td.focused {
   cursor: pointer;
-  background: var(--color-interface-soft);
+  background: var(--color-interface-softer);
 }
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
   color: var(--color-interface-medium);
@@ -12662,22 +12662,22 @@ ul.list-group-panel .list-group-item:first-child,
   background: var(--color-info-soft);
 }
 .datepicker table tr td.today {
-  color: var(--color-interface-strongest);
-  background-color: var(--color-critical-soft);
+  color: var(--base-interface-softest);
+  background-color: var(--color-primary);
 }
 .datepicker table tr td.today:hover, .datepicker table tr td.today:focus {
-  background: var(--color-critical-strong);
+  background: var(--color-primary-shade);
 }
 .datepicker table tr td.today.focused {
-  background: var(--color-critical-strong);
+  background: var(--color-primary-shade);
 }
 .datepicker table tr td.today.disabled, .datepicker table tr td.today.disabled:active {
   color: var(--color-interface-medium);
-  background: var(--color-critical-soft);
+  background: var(--color-primary);
 }
 .datepicker table tr td.range {
   color: var(--color-interface-strongest);
-  background: var(--color-interface-softer);
+  background: var(--color-primary-tint);
   border-radius: 0;
 }
 .datepicker table tr td.range.focused, .datepicker table tr td.range:hover {
@@ -12708,7 +12708,8 @@ ul.list-group-panel .list-group-item:first-child,
 }
 .datepicker table tr td.range.today {
   color: var(--color-interface-strongest);
-  background: var(--color-interface-soft);
+  background: var(--color-primary-tint);
+  border: 1px solid var(--color-primary);
 }
 .datepicker table tr td.range.today:hover {
   background: var(--color-interface-soft);
@@ -12720,10 +12721,10 @@ ul.list-group-panel .list-group-item:first-child,
 .datepicker table tr td.selected, .datepicker table tr td.selected.highlighted {
   color: var(--color-interface-softest);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background: var(--color-interface-medium);
+  background: var(--color-primary);
 }
 .datepicker table tr td.selected:hover, .datepicker table tr td.selected.highlighted:hover {
-  background: var(--color-interface-medium);
+  background: var(--color-primary);
 }
 .datepicker table tr td.active, .datepicker table tr td.active.highlighted {
   color: var(--color-interface-softest);
@@ -16970,13 +16971,13 @@ iframe.file-browser {
 }
 
 .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
-  background-color: var(--color-interface-soft);
+  background-color: var(--color-interface-softer);
 }
 
 .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
-  color: var(--color-interface-softest);
+  color: var(--color-interface-strong);
   font-weight: var(--font-weight-semibold);
-  background-color: var(--color-interface-medium);
+  background-color: var(--color-interface-soft);
 }
 
 .ant-select-item-option-selected:not(.ant-select-item-option-disabled) .ant-select-item-option-state {
