--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.css
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.css
@@ -1192,16 +1192,16 @@ a.rock-bookmark {
     --base-secondary: #83758f;
     --base-critical: #ee7725;
     --base-danger: #D70015;
-    --base-info: #007AFF;
-    --base-success: #32D74B;
+    --base-info: #007DD7;
+    --base-success: #00AE1A;
     --base-warning: #E58600;
-    --base-interface-strongest: #000000;
+    --base-interface-strongest: #0a0a0a;
     --base-interface-stronger: #0d1117;
     --base-interface-strong: #3d444d;
     --base-interface-medium: #8B8BA7;
     --base-interface-soft: #D9D9E3;
     --base-interface-softer: #f8f8fc;
-    --base-interface-softest: #FFFFFF;
+    --base-interface-softest: #fdfdfd;
     --font-size-xsmall: 12px;
     --font-size-small: 14px;
     --font-size-regular: 16px;
