--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.css
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.css
@@ -1192,8 +1192,8 @@ a.rock-bookmark {
     --base-secondary: #83758f;
     --base-critical: #ee7725;
     --base-danger: #D70015;
-    --base-info: #007DD7;
-    --base-success: #00AE1A;
+    --base-info: #005DD7;
+    --base-success: #01A11E;
     --base-warning: #E58600;
     --base-interface-strongest: #0a0a0a;
     --base-interface-stronger: #0d1117;
