--- a/RockWeb/Styles/styles-v2-prototype/components/_labels.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_labels.scss
@@ -60,8 +60,9 @@
 
 // ======================== ALTERNATIVE STYLE ========================
 .label-default{
-  background-color:   var(--color-interface-soft);
+  background-color:   var(--color-interface-softer);
   color:              var(--color-interface-strong);
+  border:             1px solid var(--color-interface-soft);
 
   &[href] {
     &:hover,
