--- a/RockWeb/Styles/Bootstrap/tooltip.less
+++ b/RockWeb/Styles/Bootstrap/tooltip.less
@@ -100,6 +100,7 @@
   text-align: center;
   background-color: @tooltip-bg;
   border-radius: @border-radius-base;
+  word-break: break-word;
 }
 
 // Arrows
