--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -4304,7 +4304,7 @@ button.close {
 .list-group-item {
   position: relative;
   display: block;
-  padding: var(--spacing-xsmall) var(--spacing-medium);
+  padding: var(--spacing-small) var(--spacing-medium);
   margin-bottom: -1px;
   background-color: var(--color-interface-softest);
   border: 1px solid var(--color-interface-soft);
@@ -4345,7 +4345,7 @@ button.close {
 }
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
-  color: var(--color-interface-softest);
+  color: var(--base-interface-softest);
   background-color: var(--color-primary);
   border-color: var(--color-primary);
 }
