--- a/RockWeb/Styles/styles-v2-prototype/components/_list-group.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_list-group.scss
@@ -20,7 +20,7 @@
 .list-group-item {
   position:           relative;
   display:            block;
-  padding:            var(--spacing-xsmall) var(--spacing-medium);
+  padding:            var(--spacing-small) var(--spacing-medium);
   // Place the border on the list items and negative margin up for better styling
   margin-bottom:      -1px;
   background-color:   var(--color-interface-softest);
@@ -77,7 +77,7 @@
   &.active:hover,
   &.active:focus {
     z-index: 2; // Place active items above their siblings for proper border styling
-    color:                var(--color-interface-softest);
+    color:                var(--base-interface-softest);
     background-color:     var(--color-primary);
     border-color:         var(--color-primary);
 
