--- a/RockWeb/Styles/styles-v2-prototype/font-styling/_fixed-width.scss
+++ b/RockWeb/Styles/styles-v2-prototype/font-styling/_fixed-width.scss
@@ -1,7 +1,8 @@
 
 // This files is being imported by './_font-styling-core.scss'
 
-.fa-fw {
+.fa-fw,
+.ti-tw {
     text-align: center;
     width: calc(20em / 16);
 }
