--- a/RockWeb/Styles/styles-v2-prototype/font-styling/_sizes.scss
+++ b/RockWeb/Styles/styles-v2-prototype/font-styling/_sizes.scss
@@ -1,45 +1,57 @@
 
 // This files is being imported by './_font-styling-core.scss'
 
-.fa-lg {
+.fa-lg,
+.ti-lg {
     font-size: calc(4em / 3);
     line-height: calc(3em / 4);
     vertical-align: -.0667em;
 }
 
-.fa-xs {
+.fa-xs,
+.ti-xs {
     font-size: .75em;
 }
 
-.fa-sm {
+.fa-sm,
+.ti-sm {
     font-size: .875em;
 }
 
-.fa-2x {
+.fa-2x,
+.ti-2x {
     font-size: 2em;
 }
-.fa-3x {
+.fa-3x,
+.ti-3x {
     font-size: 3em;
 }
-.fa-4x {
+.fa-4x,
+.ti-4x {
     font-size: 4em;
 }
-.fa-5x {
+.fa-5x,
+.ti-5x {
     font-size: 5em;
 }
-.fa-6x {
+.fa-6x,
+.ti-6x {
     font-size: 6em;
 }
-.fa-7x {
+.fa-7x,
+.ti-7x {
     font-size: 7em;
 }
-.fa-8x {
+.fa-8x,
+.ti-8x {
     font-size: 8em;
 }
-.fa-9x {
+.fa-9x,
+.ti-9x {
     font-size: 9em;
 }
-.fa-10x {
+.fa-10x,
+.ti-10x {
     font-size: 10em;
 }
 
