- Updated the profile page styling in Styles v2.

--- a/RockWeb/Styles/styles-v2-prototype/components/_badges.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_badges.scss
@@ -435,6 +435,14 @@ $badge-baptism-color: #23a5c5;
   }
 }
 
+.panel-body .activeusers .recent i {
+  color: var(--color-success-strong);
+}
+
+.panel-body .activeusers .not-recent i {
+  color: var(--color-warning-strong);
+}
+
 .badge-lastvisitonsite {
   .badge-content {
     position: relative;
