--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.scss
@@ -83,8 +83,14 @@ body.navbar-side-open {
 
 .main-content {
   padding: var(--spacing-medium) var(--spacing-medium) var(--spacing-xsmall) var(--spacing-medium);
+  #page-content {
+    min-height: 600px;
+  }
+  @media (min-width: $screen-medium) {
+    padding: 0;
+    margin: var(--spacing-medium) var(--spacing-medium) 0;
+  }
 }
-
 
 .main-footer:has(.html-content) {
   background-color: var(--color-interface-softest);
@@ -474,7 +480,6 @@ $navbar-element-height: 40px;
 .nav-pills > li > a {
   color: var(--color-interface-strong);
   background-color: var(--color-interface-softer);
-  border: 1px solid var(--color-interface-soft);
 }
 
 // Side Nav
