- Fixed broken LMS styling in Styles v2.

--- a/RockWeb/Styles/styles-v2-prototype/core.scss
+++ b/RockWeb/Styles/styles-v2-prototype/core.scss
@@ -135,6 +135,7 @@
 /* ===================== BLOCK =================== */
 @import 'blocks/blocks-core';                       // Fully Format. There are Some hard coded value.
 @import 'blocks/blocks-groups';                     // Fully Format. There are Some hard coded value.
+@import 'blocks/blocks-lms';
 @import 'blocks/blocks-reporting';                  // Fully Format. There are Some hard coded value.
 @import 'blocks/blocks-finance';                    // Fully Format. There are Some hard coded value.
 @import 'blocks/blocks-communication';              // Fully Format. There are Some hard coded value.
