- Fixed broken stark theme due to markup changed.

--- a/RockWeb/Styles/rock-components/security-controls.less
+++ b/RockWeb/Styles/rock-components/security-controls.less
@@ -3,6 +3,13 @@
 // --------------------------------------------------
 
 .loginstatus {
+  .dropdown-toggle.navbar-link {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: var(--spacing-xsmall);
+  }
+
   & > li {
     min-width: 160px;
     text-align: right;
@@ -12,6 +19,7 @@
     }
   }
 }
+
 
 .splash-form-btn {
   display: flex;
