--- a/RockWeb/Styles/styles-v2-prototype/core.css
+++ b/RockWeb/Styles/styles-v2-prototype/core.css
@@ -12211,6 +12211,13 @@ div.aspNetDisabled {
   background-color: transparent;
 }
 
+.dropdown-toggle.navbar-link {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: var(--spacing-xsmall);
+}
+
 .loginstatus {
   margin: 0;
 }
