--- a/RockWeb/Styles/styles-v2-prototype/rock-components/_security-controls.scss
+++ b/RockWeb/Styles/styles-v2-prototype/rock-components/_security-controls.scss
@@ -41,6 +41,13 @@
   }
 }
 
+.dropdown-toggle.navbar-link {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: var(--spacing-xsmall);
+}
+
 .loginstatus {
   margin: 0;
 
