--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.css
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.css
@@ -348,6 +348,7 @@ body.navbar-side-open {
   align-items: center;
   padding: 0 0;
   color: var(--color-interface-strong);
+  gap: 0;
 }
 @media (max-width: 991px) {
   .rock-top-header .loginstatus > li > a {
