--- a/RockWeb/Styles/styles-v2-prototype/components/_bootstrap-chosen.scss
+++ b/RockWeb/Styles/styles-v2-prototype/components/_bootstrap-chosen.scss
@@ -217,7 +217,7 @@
   }
 
   .chosen-search {
-    padding:      var(--spacing-xsmall) var(--spacing-tiny) 0;
+    padding:      var(--spacing-xsmall) var(--spacing-xsmall) 0;
     white-space:  nowrap;
 
     &::after {
