--- a/RockWeb/Themes/RockV2Prototype/Styles/theme.css
+++ b/RockWeb/Themes/RockV2Prototype/Styles/theme.css
@@ -63,22 +63,63 @@ body.navbar-side-open {
   font-weight: 700;
   margin: 0;
 }
-@media (max-width: 991px) {
+@media (max-width: 1200px) {
   .header-content .page-title-display {
     display: none;
   }
 }
 
 .main-content {
-  padding: var(--spacing-medium) var(--spacing-medium) var(--spacing-xsmall) var(--spacing-medium);
+  margin: var(--spacing-medium) var(--spacing-medium);
 }
 .main-content #page-content {
   min-height: 600px;
 }
+
+.main-content .page-header.fullwidth {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  color: var(--color-interface-strong);
+  background-color: var(--color-interface-softest);
+  border-radius: var(--rounded-medium);
+  border: 1px solid var(--color-interface-soft);
+  padding: var(--spacing-medium) var(--spacing-large);
+  margin: 0 0 var(--spacing-medium) 0;
+}
+.main-content .page-header.fullwidth .title {
+  margin: 0;
+  font-size: 24px;
+  font-weight: var(--font-weight-bold);
+}
+.main-content .page-header.fullwidth .page-icon {
+  display: none;
+}
+.main-content .page-header.fullwidth .breadcrumb {
+  padding: 0;
+  margin-top: var(--spacing-tiny);
+  font-size: var(--font-size-xsmall);
+}
+.main-content .page-header.fullwidth .breadcrumb a:hover {
+  text-decoration: underline;
+}
+.main-content .page-header.fullwidth .breadcrumb i {
+  display: none;
+}
+.main-content .page-header.fullwidth .breadcrumb > li + li::before {
+  font-family: FontAwesome;
+  font-size: 80%;
+  font-weight: 900;
+  content: "\f054";
+}
+@media (min-width: 1200px) {
+  .main-content .page-header.fullwidth {
+    display: none;
+  }
+}
 @media (min-width: 992px) {
   .main-content {
     padding: 0;
-    margin: var(--spacing-medium) var(--spacing-medium) 0;
   }
 }
 
@@ -1205,7 +1246,7 @@ a.rock-bookmark {
 
 /* CSS Overrides Bottom Start */
 :root {
-    --base-primary: #FF791D;
+    --base-primary: #2196f3;
     --logo-image: url('/Assets/Images/rock-logo-circle-white.svg');
     --base-link: #006DCC;
     --base-secondary: #83758f;
